# toolchains_gcc

./: .gitignore  README.md  deps.bzl
bazel/: MODULE.bazel  README.md
bazel/configs/common/: actions.bzl
bazel/configs/preconfigured/gcc_12.2.0/x86_64-linux/: features.bzl
bazel/example/: BUILD  MODULE.bazel  features.bzl
bazel/extensions/: gcc.bzl
bazel/extentions/: gcc.bzl
bazel/preconfigured/gcc_12.2.0/x86_64-linux/: BUILD  features.bzl
bazel/providers/: config.bzl
bazel/rules/: gcc.bzl
bazel/rules/local/: features.bzl
bazel/test/: .bazelrc  MODULE.bazel
bazel/toolchain/internal/: BUILD  cc_toolchain_config.bzl  toolchain.BUILD
rules/: gcc.bzl
tc_generator/: Dockerfile  build.sh  docker_build_and_run.sh
tc_generator/configs/: x86_64-unknown-linux-gnu_gcc12
test/: BUILD  MODULE.bazel  README.md  WORKSPACE  main.cpp  main_pthread.cpp
toolchain/internal/: cc_toolchain_config.bzl
